--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "mcptool",
+  "version": "1.0.0",
+  "description": "Pentesting tool for Minecraft",
+  "main": "main.py",
+  "scripts": {
+    "start": "node main.py"
+  },
+  "author": "davivida98",
+  "license": "MIT",
   "dependencies": {
-    "minecraft-colors": "^1.0.1",
-    "mineflayer": "^4.14.0",
-    "proxy-agent": "^6.3.1",
-    "readline": "^1.3.0",
-    "socks": "^2.7.1",
-    "telebit": "^0.20.6"
+    "express": "^4.17.1"
   }
 }
